[tool.poetry]
name = "impatients"
version = "0.1.0"
description = "Queue Management App for Clinics"
authors = ["jidicula <johanan.idicula@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.0"
flask = "^1.1.1"

[tool.poetry.dev-dependencies]
yapf = "^0.29.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
